--- a/queenscorner-frontend/src/app/components/negocios/editar-negocio/editar-negocio.html
+++ b/queenscorner-frontend/src/app/components/negocios/editar-negocio/editar-negocio.html
@@ -18,7 +18,7 @@
           </div>
           <div class="info-item">
             <label>Cliente</label>
-            <p>{{ negocio.cliente.nombre }}</p>
+            <p>{{ negocio.cliente?.nombre }}</p>
           </div>
           <div class="info-item">
             <label>Total Cotización</label>
